<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xmlns="http://maven.apache.org/POM/4.0.0"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.github</groupId>
	<artifactId>QuickExcel</artifactId>
	<version>2.0</version>
	<packaging>jar</packaging>


	<dependencies>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>5.4.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>5.4.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml-schemas</artifactId>
			<version>4.1.2</version>
		</dependency>
		<dependency>
			<groupId>jakarta.servlet</groupId>
			<artifactId>jakarta.servlet-api</artifactId>
			<version>6.1.0</version>
		</dependency>
		<dependency>
			<groupId>org.reflections</groupId>
			<artifactId>reflections</artifactId>
			<version>0.9.12</version>
			<scope>compile</scope>
		</dependency>
	</dependencies>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<maven.compile.source>17</maven.compile.source>
		<maven.compile.target>17</maven.compile.target>
		<sofa.ark.version>2.0.0</sofa.ark.version>
	</properties>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
							<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>17</source>
					<target>17</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<configuration>
					<encoding>UTF-8</encoding>
					<overwrite>true</overwrite>
				</configuration>
			</plugin>
			<!--            <plugin>-->
			<!--                <groupId>com.alipay.sofa</groupId>-->
			<!--                <artifactId>sofa-ark-plugin-maven-plugin</artifactId>-->
			<!--                <executions>-->
			<!--                    <execution>-->
			<!--                        <id>default-cli</id>-->
			<!--                        <goals>-->
			<!--                            <goal>ark-plugin</goal>-->
			<!--                        </goals>-->
			<!--                    </execution>-->
			<!--                </executions>-->
			<!--                <version>1.1.6</version>-->
			<!--            </plugin>-->
			<!--            <plugin>-->
			<!--                <groupId>com.alipay.sofa</groupId>-->
			<!--                <artifactId>sofa-ark-plugin-maven-plugin</artifactId>-->
			<!--                <version>2.0.0</version>-->
			<!--                <executions>-->
			<!--                    <execution>-->
			<!--                        <id>default-cli</id>-->
			<!--                        <goals>-->
			<!--                            <goal>ark-plugin</goal>-->
			<!--                        </goals>-->
			<!--                    </execution>-->
			<!--                </executions>-->
			<!--                <configuration>-->
			<!--                    <classifier>ark-plugin</classifier>-->
			<!--&lt;!&ndash;                    &lt;!&ndash; configure imported class &ndash;&gt;&ndash;&gt;-->
			<!--&lt;!&ndash;                    <imported>&ndash;&gt;-->
			<!--&lt;!&ndash;                        &lt;!&ndash; configure class-level imported class &ndash;&gt;&ndash;&gt;-->
			<!--&lt;!&ndash;                        <packages>&ndash;&gt;-->
			<!--&lt;!&ndash;                            <package>org.apache.poi</package>&ndash;&gt;-->
			<!--&lt;!&ndash;                        </packages>&ndash;&gt;-->
			<!--&lt;!&ndash;                    </imported>&ndash;&gt;-->

			<!--                    &lt;!&ndash; configure exported class &ndash;&gt;-->
			<!--                    <exported>-->
			<!--                        &lt;!&ndash; configure class-level exported class &ndash;&gt;-->
			<!--                        <packages>-->
			<!--                            <package>com.lizhiwei.quickExcel</package>-->
			<!--                        </packages>-->
			<!--                    </exported>-->
			<!--                </configuration>-->
			<!--            </plugin>-->


			<!--            <plugin>-->
			<!--                <artifactId>maven-assembly-plugin</artifactId>-->
			<!--                <configuration>-->
			<!--                    <archive>-->
			<!--                        <manifestEntries>-->
			<!--                            <Class-Path>.</Class-Path>-->
			<!--                            <addClasspath>true</addClasspath> &lt;!&ndash; 在jar的MF文件中生成classpath属性 &ndash;&gt;-->
			<!--                            <classpathPrefix>lib/</classpathPrefix>-->
			<!--                        </manifestEntries>-->
			<!--                    </archive>-->
			<!--                    <descriptorRefs>-->
			<!--                        <descriptorRef>jar-with-dependencies</descriptorRef>-->
			<!--                    </descriptorRefs>-->
			<!--                </configuration>-->
			<!--                <executions>-->
			<!--                    <execution>-->
			<!--                        <id>make-assembly</id>-->
			<!--                        <phase>package</phase>-->
			<!--                        <goals>-->
			<!--                            <goal>single</goal>-->
			<!--                        </goals>-->
			<!--                    </execution>-->
			<!--                </executions>-->
			<!--            </plugin>-->
		</plugins>
	</build>

</project>